# img-convert

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  batch.rs  codec.rs  files.rs  main.rs  settings.rs  theme.rs  ui.rs
