[package]
name = "img-convert"
version = "0.4.1"
edition = "2024"
rust-version = "1.85"
authors = ["Fabian Wimberger <fabian.wimberger@proton.me>"]
description = "Batch resize and compress images to JPG, AVIF, JXL, or HEIC."
license = "MIT"
readme = "README.md"
repository = "https://github.com/fabianwimberger/img-convert"
homepage = "https://github.com/fabianwimberger/img-convert"
keywords = ["image", "convert", "avif", "jxl", "heic"]
categories = ["multimedia::images", "command-line-utilities", "gui"]

[dependencies]
eframe = "0.34.2"
rfd = "0.17"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "tiff", "webp", "gif", "bmp", "ico", "hdr", "exr", "qoi", "pnm", "dds", "ff", "tga", "rayon"] }
rayon = "1.12"

[profile.release]
lto = true
codegen-units = 1
strip = true

[package.metadata.deb]
maintainer = "Fabian Wimberger <fabian.wimberger@proton.me>"
copyright = "2026, Fabian Wimberger <fabian.wimberger@proton.me>"
license-file = ["LICENSE", "0"]
extended-description = """
img-convert is a small cross-platform desktop GUI for batch resizing and \
compressing folders of images to JPG, AVIF, JXL, or HEIC. It wraps the \
encoders cjpeg, avifenc, cjxl, and heif-enc behind a native UI, with EXIF \
passthrough via exiftool when available."""
section = "graphics"
priority = "optional"
depends = "$auto"
recommends = "libjpeg-turbo-progs, libavif-bin, libjxl-tools, libheif-examples, libimage-exiftool-perl"
assets = [
    ["target/release/img-convert", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/img-convert/README.md", "644"],
    ["LICENSE", "usr/share/doc/img-convert/LICENSE", "644"],
]
